--- a/MyEdrDriver/MyEdrDriver.vcxproj.filters
+++ b/MyEdrDriver/MyEdrDriver.vcxproj.filters
@@ -28,9 +28,6 @@
     <ClCompile Include="Mutex.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CreateProcessNotifyRoutine.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AutoDeletedPointer.h">
@@ -51,9 +48,6 @@
     <ClInclude Include="Queue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Result.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="AvlTable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -69,7 +63,13 @@
     <ClInclude Include="Concepts.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CreateProcessNotifyRoutine.h">
+    <ClInclude Include="RemovePointer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TypeTraits.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Result.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
