--- a/MyEdrDriver/MyEdrDriver.vcxproj.filters
+++ b/MyEdrDriver/MyEdrDriver.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClInclude Include="Debug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MyEdrEvent.h">
+    <ClInclude Include="MyEdrDriver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Statuses.h">
