--- a/MyEdrDriver/MyEdrDriver.vcxproj
+++ b/MyEdrDriver/MyEdrDriver.vcxproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <ClCompile Include="Mutex.cpp" />
     <ClCompile Include="Memory.cpp" />
+    <ClCompile Include="UnicodeString.cpp" />
     <ResourceCompile Include="MyEdrDriver.rc" />
     <ClCompile Include="MyEdrDriver.cpp" />
     <Inf Include="MyEdrDriver.inf" />
@@ -238,6 +239,7 @@
     <ClInclude Include="MyEdrDriver.h" />
     <ClInclude Include="Result.h" />
     <ClInclude Include="Statuses.h" />
+    <ClInclude Include="UnicodeString.h" />
     <ClInclude Include="Utility.h" />
     <ClInclude Include="Queue.h" />
   </ItemGroup>
