--- a/MyEdrDriver/MyEdrDriver.vcxproj.filters
+++ b/MyEdrDriver/MyEdrDriver.vcxproj.filters
@@ -28,6 +28,9 @@
     <ClCompile Include="Mutex.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UnicodeString.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AutoDeletedPointer.h">
@@ -64,6 +67,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Result.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UnicodeString.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
